--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,10 @@
-<!doctype html>
-<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AngularQuiz</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Angular Quiz</title>
+
+  <meta name="theme-color" content="#ffc107">
+  <meta name="msapplication-TileColor" content="#ffc107">
+  <meta name="msapplication-navbutton-color" content="#ffc107">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ffc107">
+  <script src="https://kit.fontawesome.com/4eaeab91d6.js" crossorigin="anonymous"></script>
 </head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<app-root>loading</app-root>
