Final changes - finishing touches

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Angular Quiz</title>
-
   <meta name="theme-color" content="#ffc107">
   <meta name="msapplication-TileColor" content="#ffc107">
   <meta name="msapplication-navbutton-color" content="#ffc107">
   <meta name="apple-mobile-web-app-status-bar-style" content="#ffc107">
   <script src="https://kit.fontawesome.com/4eaeab91d6.js" crossorigin="anonymous"></script>
+  <base href="/">
 </head>
-<app-root>loading</app-root>
+<body>
+  <app-root>Loading...</app-root>
+</body>
+</html>
